# sorcerers-stone

./: .env.example  .gitattributes  .gitignore  README.md  SECURITY.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
.kiro/specs/: phase-1-architecture.md  phase-2-backend-core.md  phase-3-plaid-sync.md  phase-4-dashboard-ui.md  phase-5-advanced-features.md  ui-delta-v080.md
Sorcerer_Files/: ENGINEERING_BUILD_GUIDE.md  PHASE1_ARCHITECTURE_SPEC.md  PROJECT_SPEC.md  ci.yml  docker-compose.yml
alembic/: env.py
app/: Dockerfile  __init__.py  database.py  logging_config.py  main.py  models.py  models_extended.py  models_users.py  settings.py
app/auth/: authorization.py
app/middleware/: auth_guard.py  request_id.py
app/routers/: accounts.py  admin.py  assets.py  auth.py  connections.py  dashboard.py  export.py  imports.py  internal.py  investments.py  liabilities.py  link.py  risk.py  transactions.py  users.py
app/services/: audit.py  budgets.py  crypto.py  deduplication.py  net_worth.py  reports.py  sync_engine.py  user_service.py
app/services/connectors/: __init__.py  (+4 more)
app/static/: README.md
app/templates/: assets.html  base.html  connections.html  dashboard.html  liabilities.html  login.html  risk.html
docs/: ARCHITECTURE.md
docs/runbooks/: aws-foundation.md
infra/caddy/: Caddyfile
infra/terraform/: main.tf
infra/unraid/: containers.md  setup.sh  verify_backup.sh
tests/: conftest.py  test_auth.py  test_connectors.py  test_crypto.py  test_internal.py  test_models.py
(+5 files in other folders)
